<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/yellow"
        tools:context=".SettingsActivity">


        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/difficulty"
            android:textColor="@color/brown"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/soundBar" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/title_settings"
            android:textColor="@color/brown"

            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/title_volume"
            android:textColor="@color/brown"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <SeekBar
            android:id="@+id/soundBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:progress="30"
            android:progressDrawable="@drawable/style_seekbar"
            android:splitTrack="false"
            android:thumb="@drawable/ic_thumb"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/infoLevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/easy"
            android:textColor="@color/brown"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/previous_lvl"
            app:layout_constraintEnd_toStartOf="@+id/next_lvl"
            app:layout_constraintStart_toEndOf="@+id/previous_lvl"
            app:layout_constraintTop_toTopOf="@+id/previous_lvl" />

        <ImageView
            android:id="@+id/previous_lvl"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:srcCompat="@drawable/ic_previous" />

        <ImageView
            android:id="@+id/next_lvl"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:srcCompat="@drawable/ic_next" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/gameRules"
            android:textColor="@color/brown"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/previous_lvl" />

        <CheckBox
            android:id="@+id/checkBox_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:button="@drawable/style_checkbox"
            android:checked="false"
            android:fontFamily="@font/roboto_medium"
            android:paddingLeft="8dp"
            android:text="@string/vertical"
            android:textColor="@color/brown"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <CheckBox
            android:id="@+id/checkBox_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:button="@drawable/style_checkbox"
            android:fontFamily="@font/roboto_medium"
            android:paddingLeft="8dp"
            android:text="@string/horizontal"
            android:textColor="@color/brown"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox_vertical" />

        <CheckBox
            android:id="@+id/checkBox_diagonal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:button="@drawable/style_checkbox"
            android:fontFamily="@font/roboto_medium"
            android:paddingLeft="8dp"
            android:text="@string/diagonal"
            android:textColor="@color/brown"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox_horizontal" />

        <TextView
            android:id="@+id/tvToBack"
            style="@style/style_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="24dp"
            android:text="@string/backButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox_diagonal" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>